adicionado dados psicos

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -138,7 +138,7 @@ fa-tumblr,
 fa-tumblr:hover,
 .fa.fa-google-plus:hover,
 .fa.fa-tumblr:hover {
-    color: #fafafa;
+    color: #c57a40;
 }
 .fa.fa-facebook {
     color: #38529A;
@@ -153,7 +153,7 @@ fa-tumblr:hover,
 }
 
 .fa.fa-twitter:hover {
-    color: #fafafa;
+    color: #c57a40;
 }
 
 .fa.fa-instagram {
@@ -163,7 +163,7 @@ fa-tumblr:hover,
 }
 
 .fa.fa-instagram:hover {
-    color: #fafafa;
+    color: #c57a40;
 }
 
 .fa.fa-youtube {
@@ -173,7 +173,7 @@ fa-tumblr:hover,
 }
 
 .fa.fa-youtube:hover {
-    color: #fafafa;
+    color: #c57a40;
 }
 
 .copyright {
